fixed weird issue

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,10 +1,7 @@
----
----
-
 @charset "utf-8";
 
 $theme-colors: (
-  "primary": {{site.color-scheme}}
+  "primary": "#FF91A4"
 );
 
 // Width of the content area
