--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,8 +8,6 @@
   <title>{{ site.title }}</title>
 
   <!-- Bootstrap core CSS -->
-  {% assign custom_url = site.url | append: site.baseurl %}
-  {% assign full_base_url = custom_url %}
-  <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: full_base_url }}">
-  <!-- <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet" /> -->
+  <!-- <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: full_base_url }}"> -->
+  <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet" />
 </head>
