trying to get images to show up

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,10 +16,7 @@ $on-laptop: 800px;
   }
 }
 
-$primary: purple;
-
-@import "bootstrap/functions";
-@import "bootstrap/variables";
+$primary: #FF91A4;
 
 @import "bootstrap/bootstrap";
 
