--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,6 +18,9 @@ $on-laptop: 800px;
 
 $primary: pink;
 
+@import "bootstrap/functions";
+@import "bootstrap/variables";
+
 @import "bootstrap/bootstrap";
 
 @import "style", "custom";
