--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,5 +8,5 @@
   <title>{{ site.title }}</title>
 
   <!-- <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: full_base_url }}"> -->
-  <link href="{{ baseurl }}/assets/css/main.css" rel="stylesheet"/>
+  <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet"/>
 </head>
